hydra/hydra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hydra
        app.kubernetes.io/instance: hydra
    spec:
      containers:
      - name: hydra
        image: oryd/hydra:v1.0.0
        imagePullPolicy: IfNotPresent
        args:
        - serve
        - all
        - --config
        - /etc/config/config.yaml
        command:
        - hydra
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /health/alive
            port: http-admin
          initialDelaySeconds: 30
          periodSeconds: 10
        ports:
        - containerPort: 4444
          name: http-public
          protocol: TCP
        - containerPort: 4445
          name: http-admin
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /health/ready
            port: http-admin
          initialDelaySeconds: 30
          periodSeconds: 10
        resources: {}
        volumeMounts:
        - mountPath: /etc/config
          name: hydra-config-volume
          readOnly: true
      volumes:
      - configMap:
          name: hydra
        name: hydra-config-volume
