hydra/hydra/secret-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-secret-sync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydra-secret-sync
  template:
    metadata:
      labels:
        app: hydra-secret-sync
    spec:
      containers:
      - name: sync
        image: lachlanevenson/k8s-kubectl:v1.16.3
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
        readinessProbe:
          exec:
            command:
              - /bin/cat
              - /tmp/synced
          initialDelaySeconds: 7
          periodSeconds: 5
        resources:
          requests:
            cpu: "10m"
            memory: "16Mi"
          limits:
            cpu: "200m"
            memory: "64Mi"
        volumeMounts:
        - name: postgres-credentials
          mountPath: /tmp/postgres
      volumes:
      - name: postgres-credentials
        secret:
          secretName: hydra.pg-cluster.credentials
      terminationGracePeriodSeconds: 3
      automountServiceAccountToken: true
      serviceAccountName: hydra-secret-sync
