hydra/hydra/hydra-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-admin
spec:
  ports:
  - name: http
    port: 4445
    protocol: TCP
    targetPort: http-admin
  selector:
    app.kubernetes.io/instance: hydra
    app.kubernetes.io/name: hydra
  type: ClusterIP
