hydra/hydra/hydra-public-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-public
spec:
  ports:
  - name: http
    port: 4444
    protocol: TCP
    targetPort: http-public
  selector:
    app.kubernetes.io/instance: hydra
    app.kubernetes.io/name: hydra
  type: ClusterIP
