hydra/hydra/hydra-admin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hydra-admin
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
    hostname: admin.hydra.example.org
spec:
  rules:
  - host: $(ADMIN_HOSTNAME)
    http:
      paths:
      - backend:
          serviceName: hydra-admin
          servicePort: http
        path: /
  tls:
  - hosts:
    - $(ADMIN_HOSTNAME)
    secretName: hydra-admin-tls
